--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url(https://i.pinimg.com/originals/ac/54/a1/ac54a128942c750799c2c1fe144d2467.jpg);
+  background-image:url('https://i.pinimg.com/originals/ac/54/a1/ac54a128942c750799c2c1fe144d2467.jpg');
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
+
+
 
 .to-do-list {
   background: white;
